# Truncate

./: Cargo.toml  README.md
truncate_auto/: Cargo.toml  README.md
truncate_auto/proto/: service.proto
truncate_auto/src/: lib.rs  main.rs
truncate_core/src/: bag.rs  board.rs  game.rs  generation.rs  reporting.rs  rules.rs
truncate_core/src/npc/: mod.rs
